--- a/templates/all-events.html
+++ b/templates/all-events.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Detail{% endblock title %}
+{% block title %}All Events{% endblock title %}
   {% load static %}
 {% block content %}
 
-      <section class="parallax-container overlay-1" data-parallax-img="{% static 'images/breadcrumbs.jpg' %}">
+      <section class="parallax-container overlay-1" data-parallax-img="{% static 'images/1920-570.png' %}">
         <div class="parallax-content breadcrumbs-custom context-dark"> 
           <div class="container">
             <div class="row justify-content-center">
