--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -41,7 +41,8 @@
     <body>
         
 
-
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'all_events' %}">Back</a>
 
 
         <button onclick="handlePrint()">Chop etish</button>
