--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -3,7 +3,7 @@
   {% load static %}
 {% block content %}
   <!-- Swiper-->
-  <section class="parallax-container overlay-1" data-parallax-img="{% static 'images/breadcrumbs.jpg' %}">
+  <section class="parallax-container overlay-1" data-parallax-img="{% static 'images/contact.jpg' %}">
     <div class="parallax-content breadcrumbs-custom context-dark"> 
       <div class="container">
         <div class="row justify-content-center">
@@ -24,7 +24,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-triangle"><span class="icon-xl linearicons-phone-incoming"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="tel:#">1-800-123-1234</a></h4>
+                  <h4><a href="tel:#">{{about.phone}}</a></h4>
                   <p>You can call us anytime</p>
                 </div>
               </div>
@@ -33,7 +33,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-circle"><span class="icon-xl linearicons-map2"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="#">51 Francis Street, San Diego, CA 91702 United States</a></h4>
+                  <h4><a href="#">{{about.address}}</a></h4>
                 </div>
               </div>
             </div>
@@ -41,7 +41,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-rectangle"><span class="icon-xl linearicons-paper-plane"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="mailto:#">info@demolink.org</a></h4>
+                  <h4><a href="mailto:#">{{about.email}}</a></h4>
                   <p>Feel free to email us your questions</p>
                 </div>
               </div>
